test to fix button text align on mobile

--- a/src/components/SelectLang/SelectLang.scss
+++ b/src/components/SelectLang/SelectLang.scss
@@ -29,6 +29,7 @@
        @include button-basic;
        width: 75%;
        margin: 3rem 0;
+       text-align: center;
 
        &--quenya{
         background-color: $button-green;
