--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -10,6 +10,7 @@
     color: $text-button;
     font-size: 4rem;
     font-family: 'Istok';
+    text-align: center;
     cursor: crosshair;
 
 }
